--- a/project/package.json
+++ b/project/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0 <19.0.0"
+  },
   "scripts": {
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "dev:client": "vite",
@@ -16,7 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "express": "^4.18.3",
-    "better-sqlite3": "^9.4.3",
+    "sqlite3": "^5.1.7",
     "date-fns": "^3.3.1",
     "axios": "^1.6.7",
     "cors": "^2.8.5"
